k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-application
  namespace: nest-kubernetes-app
spec:
  selector:
    app: nest-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
