k8s/ingress.yaml
# Should be fixed
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nest-kubernetes-app-ingress
  namespace: nest-kubernetes-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nest-application
            port:
              number: 80
